# rag-pipeline

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
apps/: rag_app.py
rag_pipeline/eval/: evaluation.py  quick_retrieval.py  retrieval.py
rag_pipeline/ingestion/: build_index.py  chromadb.py  chunker.py  data_loader.py  embedder.py
rag_pipeline/query/: answer_engine.py  query_engine.py
