[project]
name = "rag-pipline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "chromadb>=1.3.5",
    "ipykernel>=7.1.0",
    "langchain-community>=0.3.6,<0.4.0",
    "langchain-core>=0.3.6,<0.4.0",
    "langchain-text-splitters>=0.3,<0.4",
    "langchain-unstructured==0.1.6",
    "numpy>=2.3.5",
    "openai>=1.40.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "pdf2image>=1.17.0",
    "pillow>=12.0.0",
    "pymupdf>=1.26.6",
    "pypdf>=4.0.0",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.0.0",
    "python-magic>=0.4.27",
    "requests>=2.32.5",
    "sentence-transformers>=3.0.0",
    "tqdm>=4.67.1",
    "unstructured[all-docs]>=0.15.0",
]
